fixing the button text alignment on the article to the ticket info

--- a/src/styles/Article.css
+++ b/src/styles/Article.css
@@ -47,6 +47,10 @@
 }
 
 .button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 7rem !important;
     height: 2.75rem !important;
     border-radius: 8px;
